Aurora/src/plugins/platform/gscriptParser.java
package plugins.platform;

//// $ANTLR 3.0.1 C:\\Documents and Settings\\Ali1\\My Documents\\Aurora\\src\\plugins\\platform\\gscript.g 2007-09-09 02:42:11

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;
public class gscriptParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "PLUS", "MINUS", "MULT", "DIV", "LPAREN", "RPAREN", "LBRAC", "RBRAC", "EQUALS", "EQUALS2", "NOT_EQUALS", "GT", "GTE", "LT", "LTE", "COMMENT1", "DOC_COMMENT", "WORD", "NUMBER", "NEGINTEGER", "HEXNUMBER", "STRING", "DECIMAL", "OIVAR", "GLOBALVAR", "DIGIT", "LETTER", "WHITESPACE", "COMMENT", "ML_COMMENT", "STRING_DOUBLE", "STRING_SINGLE", "';'", "'public'", "'private'", "'static'", "'()'", "'class'", "'begin'", "'end'", "','", "'return'", "'exit'", "'if'", "'then'", "'else'", "'elsif'", "'not'", "'!'", "'|'", "'&'", "'^'", "'<<'", "'>>'", "'div'", "'mod'", "'&&'", "'and'", "'||'", "'or'", "'^^'", "'xor'", "':='", "'repeat'", "'break'", "'continue'", "'do'", "'until'", "'while'", "'for'", "'switch'", "'case'", "'default'", "':'", "'with'", "'+='", "'-='", "'*='", "'/='", "'|='", "'&\\\\'", "'^='", "'['", "']'"
    };
    public static final int COMMENT1=19;
    public static final int LT=17;
    public static final int EQUALS2=13;
    public static final int LETTER=30;
    public static final int GTE=16;
    public static final int NUMBER=22;
    public static final int WHITESPACE=31;
    public static final int NEGINTEGER=23;
    public static final int EQUALS=12;
    public static final int MULT=6;
    public static final int MINUS=5;
    public static final int EOF=-1;
    public static final int NOT_EQUALS=14;
    public static final int LTE=18;
    public static final int LBRAC=10;
    public static final int LPAREN=8;
    public static final int WORD=21;
    public static final int ML_COMMENT=33;
    public static final int RPAREN=9;
    public static final int DECIMAL=26;
    public static final int RBRAC=11;
    public static final int DOC_COMMENT=20;
    public static final int GT=15;
    public static final int STRING_DOUBLE=34;
    public static final int GLOBALVAR=28;
    public static final int PLUS=4;
    public static final int STRING_SINGLE=35;
    public static final int DIGIT=29;
    public static final int DIV=7;
    public static final int COMMENT=32;
    public static final int OIVAR=27;
    public static final int STRING=25;
    public static final int HEXNUMBER=24;

        public gscriptParser(TokenStream input) {
            super(input);
            ruleMemo = new HashMap[138+1];
         }
        

    public String[] getTokenNames() { return tokenNames; }
    public String getGrammarFileName() { return "C:\\Documents and Settings\\Ali1\\My Documents\\Aurora\\src\\plugins\\platform\\gscript.g"; }



    // $ANTLR start program
    // C:\\Documents and Settings\\Ali1\\My Documents\\Aurora\\src\\plugins\\platform\\gscript.g:35:1: program : ( ( field | method | innerclass ) ( ';' )* )* ;
    public final void program() throws RecognitionException {
        int program_StartIndex = input.index();
        try {
            if ( backtracking>0 && alreadyParsedRule(input, 1) ) { return ; }
            // C:\\Documents and Settings\\Ali1\\My Documents\\Aurora\\src\\plugins\\platform\\gscript.g:37:1: ( ( ( field | method | innerclass ) ( ';' )* )* )
            // C:\\Documents and Settings\\Ali1\\My Documents\\Aurora\\src\\plugins\\platform\\gscript.g:37:3: ( ( field | method | innerclass ) ( ';' )* )*
            {
            // C:\\Documents and Settings\\Ali1\\My Documents\\Aurora\\src\\plugins\\platform\\gscript.g:37:3: ( ( field | method | innerclass ) ( ';' )* )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==WORD||(LA3_0>=37 && LA3_0<=39)||LA3_0==41) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // C:\\Documents and Settings\\Ali1\\My Documents\\Aurora\\src\\plugins\\platform\\gscript.g:37:4: ( field | method | innerclass ) ( ';' )*
            	    {
            	    // C:\\Documents and Settings\\Ali1\\My Documents\\Aurora\\src\\plugins\\platform\\gscript.g:37:4: ( field | method | innerclass )
            	    int alt1=3;
            	    switch ( input.LA(1) ) {
            	    case 37:
            	    case 38:
            	        {
            	        int LA1_1 = input.LA(2);

            	        if ( (LA1_1==39) ) {
            	            int LA1_5 = input.LA(3);

            	            if ( (LA1_5==WORD) ) {
            	                int LA1_9 = input.LA(4);

            	                if ( (synpred1()) ) {
            	                    alt1=1;
            	                }
            	                else if ( (synpred2()) ) {
            	                    alt1=2;
            	                }
            	                else {
            	                    if (backtracking>0) {failed=true; return ;}
            	                    NoViableAltException nvae =
            	                        new NoViableAltException("37:4: ( field | method | innerclass )", 1, 9, input);

            	                    throw nvae;
            	                }
            	            }
            	            else {
            	                if (backtracking>0) {failed=true; return ;}
            	                NoViableAltException nvae =
            	                    new NoViableAltException("37:4: ( field | method | innerclass )", 1, 5, input);

            	                throw nvae;
            	            }
            	        }
            	        else if ( (LA1_1==WORD) ) {
            	            int LA1_6 = input.LA(3);

            	            if ( (LA1_6==WORD) ) {
            	                int LA1_10 = input.LA(4);

            	                if ( (synpred1()) ) {
            	                    alt1=1;
            	                }
            	                else if ( (synpred2()) ) {
            	                    alt1=2;
            	                }
            	                else {
            	                    if (backtracking>0) {failed=true; return ;}
            	                    NoViableAltException nvae =
            	                        new NoViableAltException("37:4: ( field | method | innerclass )", 1, 10, input);

            	                    throw nvae;
            	                }
            	            }
            	            else {
            	                if (backtracking>0) {failed=true; return ;}
            	                NoViableAltException nvae =
            	                    new NoViableAltException("37:4: ( field | method | innerclass )", 1, 6, input);

            	                throw nvae;
            	            }
            	        }
            	        else {
            	            if (backtracking>0) {failed=true; return ;}
            	            NoViableAltException nvae =
            	                new NoViableAltException("37:4: ( field | method | innerclass )", 1, 1, input);

            	            throw nvae;
            	        }
            	        }
            	        break;
            	    case 39:
            	        {
            	        int LA1_2 = input.LA(2);

            	        if ( (LA1_2==WORD) ) {
            	            int LA1_7 = input.LA(3);

            	            if ( (LA1_7==WORD) ) {
            	                int LA1_11 = input.LA(4);

            	                if ( (synpred1()) ) {
            	                    alt1=1;
            	                }
            	                else if ( (synpred2()) ) {
            	                    alt1=2;
            	                }
            	                else {
            	                    if (backtracking>0) {failed=true; return ;}
            	                    NoViableAltException nvae =
            	                        new NoViableAltException("37:4: ( field | method | innerclass )", 1, 11, input);

            	                    throw nvae;
            	                }
            	            }
            	            else {
            	                if (backtracking>0) {failed=true; return ;}
            	                NoViableAltException nvae =
            	                    new NoViableAltException("37:4: ( field | method | innerclass )", 1, 7, input);

            	                throw nvae;
            	            }
            	        }
            	        else {
            	            if (backtracking>0) {failed=true; return ;}
            	            NoViableAltException nvae =
            	                new NoViableAltException("37:4: ( field | method | innerclass )", 1, 2, input);

            	            throw nvae;
            	        }
            	        }
            	        break;
            	    case WORD:
            	        {
            	        int LA1_3 = input.LA(2);

            	        if ( (LA1_3==WORD) ) {
            	            int LA1_8 = input.LA(3);

            	            if ( (LA1_8==40) ) {
            	                alt1=2;
            	            }
            	            else if ( (LA1_8==EQUALS) ) {
            	                alt1=1;
            	            }
            	            else {
            	                if (backtracking>0) {failed=true; return ;}
            	                NoViableAltException nvae =
            	                    new NoViableAltException("37:4: ( field | method | innerclass )", 1, 8, input);

            	                throw nvae;
            	            }
            	        }
            	        else {
            	            if (backtracking>0) {failed=true; return ;}
            	            NoViableAltException nvae =
            	                new NoViableAltException("37:4: ( field | method | innerclass )", 1, 3, input);

            	            throw nvae;
            	        }
            	        }
            	        break;
            	    case 41:
            	        {
            	        alt1=3;
            	        }
            	        break;
            	    default:
            	        if (backtracking>0) {failed=true; return ;}
            	        NoViableAltException nvae =
            	            new NoViableAltException("37:4: ( field | method | innerclass )", 1, 0, input);

            	        throw nvae;
            	    }

            	    switch (alt1) {
            	        case 1 :
            	            // C:\\Documents and Settings\\Ali1\\My Documents\\Aurora\\src\\plugins\\platform\\gscript.g:37:5: field
            	            {
            	            pushFollow(FOLLOW_field_in_program177);
            	            field();
            	            _fsp--;
            	            if (failed) return ;

            	            }
            	            break;
            	        case 2 :
            	            // C:\\Documents and Settings\\Ali1\\My Documents\\Aurora\\src\\plugins\\platform\\gscript.g:37:11: method
            	            {
            	            pushFollow(FOLLOW_method_in_program179);
            	            method();
            	            _fsp--;
            	            if (failed) return ;

            	            }
            	            break;
            	        case 3 :
            	            // C:\\Documents and Settings\\Ali1\\My Documents\\Aurora\\src\\plugins\\platform\\gscript.g:37:18: innerclass
            	            {
            	            pushFollow(FOLLOW_innerclass_in_program181);
            	            innerclass();
            	            _fsp--;
            	            if (failed) return ;

            	            }
            	            break;

            	    }

            	    // C:\\Documents and Settings\\Ali1\\My Documents\\Aurora\\src\\plugins\\platform\\gscript.g:37:30: ( ';' )*
            	    loop2:
            	    do {
            	        int alt2=2;
            	        int LA2_0 = input.LA(1);

            	        if ( (LA2_0==36) ) {
            	            alt2=1;
            	        }


            	        switch (alt2) {
            	    	case 1 :
            	    	    // C:\\Documents and Settings\\Ali1\\My Documents\\Aurora\\src\\plugins\\platform\\gscript.g:37:31: ';'
            	    	    {
            	    	    match(input,36,FOLLOW_36_in_program185); if (failed) return ;
            	    	    if ( backtracking==0 ) {
            	    	      System.out.println(";");
            	    	    }

            	    	    }
            	    	    break;

            	    	default :
            	    	    break loop2;
            	        }
            	    } while (true);


            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);

            if ( backtracking==0 ) {
              //write("hi");

            }

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
            if ( backtracking>0 ) { memoize(input, 1, program_StartIndex); }
        }
        return ;
    }
    // $ANTLR end program


    // $ANTLR start statement
    // C:\\Documents and Settings\\Ali1\\My Documents\\Aurora\\src\\plugins\\platform\\gscript.g:41:1: statement : ( bstatement | varstatement | returnstatement | exitstatement | ifstatement | repeatstatement | dostatement | whilestatement | continuestatement | breakstatement | forstatement | switchstatement | withstatement | function2 | assignment | function ) ( ';' )* ;
    public final void statement() throws RecognitionException {
        int statement_StartIndex = input.index();
        try {
            if ( backtracking>0 && alreadyParsedRule(input, 2) ) { return ; }
            // C:\\Documents and Settings\\Ali1\\My Documents\\Aurora\\src\\plugins\\platform\\gscript.g:42:1: ( ( bstatement | varstatement | returnstatement | exitstatement | ifstatement | repeatstatement | dostatement | whilestatement | continuestatement | breakstatement | forstatement | switchstatement | withstatement | function2 | assignment | function ) ( ';' )* )
            // C:\\Documents and Settings\\Ali1\\My Documents\\Aurora\\src\\plugins\\platform\\gscript.g:42:3: ( bstatement | varstatement | returnstatement | exitstatement | ifstatement | repeatstatement | dostatement | whilestatement | continuestatement | breakstatement | forstatement | switchstatement | withstatement | function2 | assignment | function ) ( ';' )*
            {
            // C:\\Documents and Settings\\Ali1\\My Documents\\Aurora\\src\\plugins\\platform\\gscript.g:42:3: ( bstatement | varstatement | returnstatement | exitstatement | ifstatement | repeatstatement | dostatement | whilestatement | continuestatement | breakstatement | forstatement | switchstatement | withstatement | function2 | assignment | function )
            int alt4=16;
            switch ( input.LA(1) ) {
            case LBRAC:
            case 42:
                {
                alt4=1;
                }
                break;
            case WORD:
                {
                switch ( input.LA(2) ) {
                case LPAREN:
                    {
                    alt4=16;
                    }
                    break;
                case EQUALS:
                case 66:
                case 79:
                case 80:
                case 81:
                case 82:
                case 83:
                case 84:
                case 85:
                case 86:
                    {
                    alt4=15;
                    }
                    break;
                case WORD:
                case OIVAR:
                case GLOBALVAR:
                    {
                    alt4=2;
                    }
                    break;
                default:
                    if (backtracking>0) {failed=true; return ;}
                    NoViableAltException nvae =
                        new NoViableAltException("42:3: ( bstatement | varstatement | returnstatement | exitstatement | ifstatement | repeatstatement | dostatement | whilestatement | continuestatement | breakstatement | forstatement | switchstatement | withstatement | function2 | assignment | function )", 4, 2, input);

                    throw nvae;
                }

                }
                break;
            case 45:
                {
                alt4=3;
                }
                break;
            case 46:
                {
                alt4=4;
                }
                break;
            case 47:
                {
                alt4=5;
                }
                break;
            case 67:
                {
                alt4=6;
                }
                break;
            case 70:
                {
                alt4=7;
                }
                break;
            case 72:
                {
                alt4=8;
                }
                break;
            case 69:
                {
                alt4=9;
                }
                break;
            case 68:
                {
                alt4=10;
                }
                break;
            case 73:
                {
                alt4=11;
                }
                break;
            case 74:
                {
                alt4=12;
                }
                break;
            case 78:
                {
                alt4=13;
                }
                break;
            case OIVAR:
                {
                int LA4_14 = input.LA(2);

                if ( (LA4_14==EQUALS||LA4_14==66||(LA4_14>=79 && LA4_14<=86)) ) {
                    alt4=15;
                }
                else if ( (LA4_14==LPAREN) ) {
                    alt4=14;
                }
                else {
                    if (backtracking>0) {failed=true; return ;}
                    NoViableAltException nvae =
                        new NoViableAltException("42:3: ( bstatement | varstatement | returnstatement | exitstatement | ifstatement | repeatstatement | dostatement | whilestatement | continuestatement | breakstatement | forstatement | switchstatement | withstatement | function2 | assignment | function )", 4, 14, input);

                    throw nvae;
                }
                }
                break;
            case GLOBALVAR:
                {
                alt4=15;
                }
                break;
            default:
                if (backtracking>0) {failed=true; return ;}
                NoViableAltException nvae =
                    new NoViableAltException("42:3: ( bstatement | varstatement | returnstatement | exitstatement | ifstatement | repeatstatement | dostatement | whilestatement | continuestatement | breakstatement | forstatement | switchstatement | withstatement | function2 | assignment | function )", 4, 0, input);

                throw nvae;
            }

            switch (alt4) {
                case 1 :
                    // C:\\Documents and Settings\\Ali1\\My Documents\\Aurora\\src\\plugins\\platform\\gscript.g:42:4: bstatement
                    {
                    pushFollow(FOLLOW_bstatement_in_statement202);
                    bstatement();
                    _fsp--;
                    if (failed) return ;

                    }
                    break;
                case 2 :
                    // C:\\Documents and Settings\\Ali1\\My Documents\\Aurora\\src\\plugins\\platform\\gscript.g:42:15: varstatement
                    {
                    pushFollow(FOLLOW_varstatement_in_statement204);
                    varstatement();
                    _fsp--;
                    if (failed) return ;

                    }
                    break;
                case 3 :
                    // C:\\Documents and Settings\\Ali1\\My Documents\\Aurora\\src\\plugins\\platform\\gscript.g:42:28: returnstatement
                    {
                    pushFollow(FOLLOW_returnstatement_in_statement206);
                    returnstatement();
                    _fsp--;
                    if (failed) return ;

                    }
                    break;
                case 4 :
                    // C:\\Documents and Settings\\Ali1\\My Documents\\Aurora\\src\\plugins\\platform\\gscript.g:42:44: exitstatement
                    {
                    pushFollow(FOLLOW_exitstatement_in_statement208);
                    exitstatement();
                    _fsp--;
                    if (failed) return ;

                    }
                    break;
                case 5 :
                    // C:\\Documents and Settings\\Ali1\\My Documents\\Aurora\\src\\plugins\\platform\\gscript.g:42:58: ifstatement
                    {
                    pushFollow(FOLLOW_ifstatement_in_statement210);
                    ifstatement();
                    _fsp--;
                    if (failed) return ;

                    }
                    break;
                case 6 :
                    // C:\\Documents and Settings\\Ali1\\My Documents\\Aurora\\src\\plugins\\platform\\gscript.g:42:70: repeatstatement
                    {
                    pushFollow(FOLLOW_repeatstatement_in_statement212);
                    repeatstatement();
                    _fsp--;
                    if (failed) return ;

                    }
                    break;
                case 7 :
                    // C:\\Documents and Settings\\Ali1\\My Documents\\Aurora\\src\\plugins\\platform\\gscript.g:42:86: dostatement
                    {
                    pushFollow(FOLLOW_dostatement_in_statement214);
                    dostatement();
                    _fsp--;
                    if (failed) return ;

                    }
                    break;
                case 8 :
                    // C:\\Documents and Settings\\Ali1\\My Documents\\Aurora\\src\\plugins\\platform\\gscript.g:42:98: whilestatement
                    {
                    pushFollow(FOLLOW_whilestatement_in_statement216);
                    whilestatement();
                    _fsp--;
                    if (failed) return ;

                    }
                    break;
                case 9 :
                    // C:\\Documents and Settings\\Ali1\\My Documents\\Aurora\\src\\plugins\\platform\\gscript.g:42:113: continuestatement
                    {
                    pushFollow(FOLLOW_continuestatement_in_statement218);
                    continuestatement();
                    _fsp--;
                    if (failed) return ;

                    }
                    break;
                case 10 :
                    // C:\\Documents and Settings\\Ali1\\My Documents\\Aurora\\src\\plugins\\platform\\gscript.g:42:131: breakstatement
                    {
                    pushFollow(FOLLOW_breakstatement_in_statement220);
                    breakstatement();
                    _fsp--;
                    if (failed) return ;

                    }
                    break;
                case 11 :
                    // C:\\Documents and Settings\\Ali1\\My Documents\\Aurora\\src\\plugins\\platform\\gscript.g:42:146: forstatement
                    {
                    pushFollow(FOLLOW_forstatement_in_statement222);
                    forstatement();
                    _fsp--;
                    if (failed) return ;

                    }
                    break;
                case 12 :
                    // C:\\Documents and Settings\\Ali1\\My Documents\\Aurora\\src\\plugins\\platform\\gscript.g:42:159: switchstatement
                    {
                    pushFollow(FOLLOW_switchstatement_in_statement224);
                    switchstatement();
                    _fsp--;
                    if (failed) return ;

                    }
                    break;
                case 13 :
                    // C:\\Documents and Settings\\Ali1\\My Documents\\Aurora\\src\\plugins\\platform\\gscript.g:42:175: withstatement
                    {
                    pushFollow(FOLLOW_withstatement_in_statement226);
                    withstatement();
                    _fsp--;
                    if (failed) return ;

                    }
                    break;
                case 14 :
                    // C:\\Documents and Settings\\Ali1\\My Documents\\Aurora\\src\\plugins\\platform\\gscript.g:42:189: function2
                    {
                    pushFollow(FOLLOW_function2_in_statement228);
                    function2();
                    _fsp--;
                    if (failed) return ;

                    }
                    break;
                case 15 :
                    // C:\\Documents and Settings\\Ali1\\My Documents\\Aurora\\src\\plugins\\platform\\gscript.g:42:199: assignment
                    {
                    pushFollow(FOLLOW_assignment_in_statement230);
                    assignment();
                    _fsp--;
                    if (failed) return ;

                    }
                    break;
                case 16 :
                    // C:\\Documents and Settings\\Ali1\\My Documents\\Aurora\\src\\plugins\\platform\\gscript.g:42:210: function
                    {
                    pushFollow(FOLLOW_function_in_statement232);
                    function();
                    _fsp--;
                    if (failed) return ;

                    }
                    break;

            }

            // C:\\Documents and Settings\\Ali1\\My Documents\\Aurora\\src\\plugins\\platform\\gscript.g:42:220: ( ';' )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==36) ) {
                    int LA5_19 = input.LA(2);

                    if ( (synpred20()) ) {
                        alt5=1;
                    }


                }


                switch (alt5) {
            	case 1 :
            	    // C:\\Documents and Settings\\Ali1\\My Documents\\Aurora\\src\\plugins\\platform\\gscript.g:42:221: ';'
            	    {
            	    match(input,36,FOLLOW_36_in_statement236); if (failed) return ;
            	    if ( backtracking==0 ) {
            	      System.out.println(";");
            	    }

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
            if ( backtracking>0 ) { memoize(input, 2, statement_StartIndex); }
        }
        return ;
    }
    // $ANTLR end statement


    // $ANTLR start field
    // C:\\Documents and Settings\\Ali1\\My Documents\\Aurora\\src\\plugins\\platform\\gscript.g:45:1: field : ( 'public' | 'private' )? ( 'static' )? type= WORD name= WORD '=' ( WORD | NUMBER ) ;
    public final void field() throws RecognitionException {
        int field_StartIndex = input.index();
        Token type=null;
        Token name=null;

        try {
            if ( backtracking>0 && alreadyParsedRule(input, 3) ) { return ; }
            // C:\\Documents and Settings\\Ali1\\My Documents\\Aurora\\src\\plugins\\platform\\gscript.g:46:1: ( ( 'public' | 'private' )? ( 'static' )? type= WORD name= WORD '=' ( WORD | NUMBER ) )
            // C:\\Documents and Settings\\Ali1\\My Documents\\Aurora\\src\\plugins\\platform\\gscript.g:46:3: ( 'public' | 'private' )? ( 'static' )? type= WORD name= WORD '=' ( WORD | NUMBER )
            {
            // C:\\Documents and Settings\\Ali1\\My Documents\\Aurora\\src\\plugins\\platform\\gscript.g:46:3: ( 'public' | 'private' )?
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( ((LA6_0>=37 && LA6_0<=38)) ) {
                alt6=1;
            }
            switch (alt6) {
                case 1 :
                    // C:\\Documents and Settings\\Ali1\\My Documents\\Aurora\\src\\plugins\\platform\\gscript.g:
                    {
                    if ( (input.LA(1)>=37 && input.LA(1)<=38) ) {
                        input.consume();
                        errorRecovery=false;failed=false;
                    }
                    else {
                        if (backtracking>0) {failed=true; return ;}
                        MismatchedSetException mse =
                            new MismatchedSetException(null,input);
                        recoverFromMismatchedSet(input,mse,FOLLOW_set_in_field249);    throw mse;
                    }


                    }
                    break;

            }

            // C:\\Documents and Settings\\Ali1\\My Documents\\Aurora\\src\\plugins\\platform\\gscript.g:46:25: ( 'static' )?
            int alt7=2;
            int LA7_0 = input.LA(1);

            if ( (LA7_0==39) ) {
                alt7=1;
            }
            switch (alt7) {
                case 1 :
                    // C:\\Documents and Settings\\Ali1\\My Documents\\Aurora\\src\\plugins\\platform\\gscript.g:46:26: 'static'
                    {
                    match(input,39,FOLLOW_39_in_field257); if (failed) return ;

                    }
                    break;

            }

            type=(Token)input.LT(1);
            match(input,WORD,FOLLOW_WORD_in_field263); if (failed) return ;
            name=(Token)input.LT(1);
            match(input,WORD,FOLLOW_WORD_in_field267); if (failed) return ;
            match(input,EQUALS,FOLLOW_EQUALS_in_field269); if (failed) return ;
            if ( (input.LA(1)>=WORD && input.LA(1)<=NUMBER) ) {
                input.consume();
                errorRecovery=false;failed=false;
            }
            else {
                if (backtracking>0) {failed=true; return ;}
                MismatchedSetException mse =
                    new MismatchedSetException(null,input);
                recoverFromMismatchedSet(input,mse,FOLLOW_set_in_field271);    throw mse;
            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
            if ( backtracking>0 ) { memoize(input, 3, field_StartIndex); }
        }
        return ;
    }
    // $ANTLR end field


    // $ANTLR start method
    // C:\\Documents and Settings\\Ali1\\My Documents\\Aurora\\src\\plugins\\platform\\gscript.g:49:1: method : ( 'public' | 'private' )? ( 'static' )? arg= WORD name= WORD '()' bstatement ;
    public final void method() throws RecognitionException {
        int method_StartIndex = input.index();
        Token arg=null;
        Token name=null;

        try {
            if ( backtracking>0 && alreadyParsedRule(input, 4) ) { return ; }
            // C:\\Documents and Settings\\Ali1\\My Documents\\Aurora\\src\\plugins\\platform\\gscript.g:50:1: ( ( 'public' | 'private' )? ( 'static' )? arg= WORD name= WORD '()' bstatement )
            // C:\\Documents and Settings\\Ali1\\My Documents\\Aurora\\src\\plugins\\platform\\gscript.g:50:4: ( 'public' | 'private' )? ( 'static' )? arg= WORD name= WORD '()' bstatement
            {
            // C:\\Documents and Settings\\Ali1\\My Documents\\Aurora\\src\\plugins\\platform\\gscript.g:50:4: ( 'public' | 'private' )?
            int alt8=2;
            int LA8_0 = input.LA(1);

            if ( ((LA8_0>=37 && LA8_0<=38)) ) {
                alt8=1;
            }
            switch (alt8) {
                case 1 :
                    // C:\\Documents and Settings\\Ali1\\My Documents\\Aurora\\src\\plugins\\platform\\gscript.g:
                    {
                    if ( (input.LA(1)>=37 && input.LA(1)<=38) ) {
                        input.consume();
                        errorRecovery=false;failed=false;
                    }
                    else {
                        if (backtracking>0) {failed=true; return ;}
                        MismatchedSetException mse =
                            new MismatchedSetException(null,input);
                        recoverFromMismatchedSet(input,mse,FOLLOW_set_in_method287);    throw mse;
                    }


                    }
                    break;

            }

            // C:\\Documents and Settings\\Ali1\\My Documents\\Aurora\\src\\plugins\\platform\\gscript.g:50:26: ( 'static' )?
            int alt9=2;
            int LA9_0 = input.LA(1);

            if ( (LA9_0==39) ) {
                alt9=1;
            }
            switch (alt9) {
                case 1 :
                    // C:\\Documents and Settings\\Ali1\\My Documents\\Aurora\\src\\plugins\\platform\\gscript.g:50:27: 'static'
                    {
                    match(input,39,FOLLOW_39_in_method295); if (failed) return ;

                    }
                    break;

            }

            arg=(Token)input.LT(1);
            match(input,WORD,FOLLOW_WORD_in_method301); if (failed) return ;
            name=(Token)input.LT(1);
            match(input,WORD,FOLLOW_WORD_in_method305); if (failed) return ;
            match(input,40,FOLLOW_40_in_method307); if (failed) return ;
            pushFollow(FOLLOW_bstatement_in_method309);
            bstatement();
            _fsp--;
            if (failed) return ;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
            if ( backtracking>0 ) { memoize(input, 4, method_StartIndex); }
        }
        return ;
    }
    // $ANTLR end method

